# gvm-sync-targets

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE.txt  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.docker/: Dockerfile  entrypoint.sh
.github/workflows/: docker.yml  python-tests.yml
src/gmp_sync_targets/: __main__.py
src/gmp_sync_targets/cli/: __init__.py
src/gvm_sync_targets/: __about__.py  __init__.py  __main__.py  util.py
src/gvm_sync_targets/cli/: __init__.py
src/gvm_sync_targets/models/: __init__.py  assets_response.py  auth_response.py  model.py  resource.py  response.py  targets_response.py  tasks_response.py
tests/gvm_sync_targets/: cli_test.py
tests/gvm_sync_targets/models/: assets_response_test.py  auth_response_test.py  targets_response_test.py
